--- a/_posts/FTZ/2020-07-07-ftz-level7.md
+++ b/_posts/FTZ/2020-07-07-ftz-level7.md
@@ -1,9 +1,9 @@
 ---
-title: BOF/ ftz-level6
+title: BOF/ ftz-level7
 tags: ftz
 ---
 
-6번 포스팅 시작합니다.
+7번 포스팅 시작합니다.
 
 FTZ란 Free Training Zone의 약자로 hackerschool에서 배포하는 워게임입니다.  
 총 20문제로 구성되어 있으며 각 문제를 격파하여 다음 레벨의 패스워드를 얻는 형식입니다.  
@@ -18,14 +18,17 @@ cat - 파일 내용 확인
 <!--more-->
 
 ---
-### FTZ Level 6
-**ID : level6**  
-**PASSWD : what the hell**         
+### FTZ Level 7
+**ID : level7**  
+**PASSWD : come together**         
 <br />
-![그림1](/assets/ftz/level6/1.PNG)  
-로그인 하자마자 힌트가 출력된다. enter를 입력하면 텔넷 접속화면으로 넘어간다.
-bbs란 예전 PC 통신 할 때 텔넷으로 접속하던 게시판으로 하이텔 나우누리 천리안이 유명했던 bbs들이다.  
+![그림1](/assets/ftz/level7/1.PNG)  
+/bin/level7명령을 실행하면 passwd 입력을 요청하는데 아무 값이나 입력하였더니 위와 같은 출력이 확인되었다.  
+모스부호같은 느낌이 드는데 _는 0으로 -는 1로 취급하여 2진수로 변환해보자.  
+01101101 01100001 01110100 01100101  
+이것을 힌트를 따라 10진수로 변환하면 109 97 116 101의 값이 나온다.  
+
 <br />
-![그림2](/assets/ftz/level6/2.PNG)  
-로그인하고 텔넷 접속 전에 Ctrl+c(강제종료) 시그널을 보내 프로세스를 죽이면 텔넷 서비스를 무시하고 shell을 획득할 수 있다.  
-passwd파일을 확인하여 다음 레벨의 passwd를 획득한다.
+![그림2](/assets/ftz/level7/2.PNG)  
+10진수를 passwd로 입력해 보았지만 올바른 passwd가 아니였다.  
+각 10진수를 ASCII코드로 변환하면 mate가 되고 이것이 올바른 passwd이다.  
