--- a/_posts/FTZ/2020-07-07-ftz-level9.md
+++ b/_posts/FTZ/2020-07-07-ftz-level9.md
@@ -1,5 +1,5 @@
 ---
-title: BOF/ ftz-level3
+title: BOF/ ftz-level9
 tags: ftz
 ---
 
@@ -12,6 +12,7 @@ FTZ란 Free Training Zone의 약자로 hackerschool에서 배포하는 워게임
 사용 linux 명령어  
 ls - 파일 내역 출력
 cat - 파일 내용 확인  
+gcc - gcc컴파일러로 컴파일하도록 하는 명령 
 
  [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
