--- a/_posts/FTZ/2020-07-07-ftz-level9.md
+++ b/_posts/FTZ/2020-07-07-ftz-level9.md
@@ -51,8 +51,8 @@ level9의 힌트로 제공되는 /usr/bin/bof의 소스이다.
 buf의 size는 각각 10Byte이며 buf에 NULL을 포함하여 최대 40Byte까지 문자를 읽어들인다.  
 buf2와 "go"문자열을 비교하여 2개의 문자가 모두 일치한다면 level10의 권한으로 /bin/bash를 실행한다.  
 
-이 문제에서 사용할 해킹 기법은 **buffer overflow**이며 buffer over flow(bof)란  
-직역하면 버퍼가 넘쳐흐르다로 프로그래머가 지정한 곳 바깥(의도하지 않은 메모리공간)에 해커가 데이터를 저장시키거나 유출시키는 해킹기법이다.  
+이 문제에서 사용할 해킹 기법은 **buffer overflow**이며 buffer overflow(bof)란  
+직역하면 버퍼가 넘쳐흐른다는 뜻으로 프로그래머가 지정한 곳 바깥(의도하지 않은 메모리공간)에 해커가 데이터를 저장시키거나 유출시키는 해킹기법이다.  
 이는 프로그램이 정상적인 동작을 하지 못하도록 하며 bof를 활용한 다양한 해킹 기법이 존재한다.  
 
 <br />
