--- a/_posts/FTZ/2020-03-08-ftz-level9.md
+++ b/_posts/FTZ/2020-03-08-ftz-level9.md
@@ -13,6 +13,7 @@ FTZ란 Free Training Zone의 약자로 hackerschool에서 배포하는 워게임
 ls - 파일 내역 출력
 cat - 파일 내용 확인  
 gcc - gcc컴파일러로 컴파일하도록 하는 명령 
+vim - text editor  
 
  [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
@@ -56,7 +57,7 @@ buf2와 "go"문자열을 비교하여 2개의 문자가 모두 일치한다면 l
 이는 프로그램이 정상적인 동작을 하지 못하도록 하며 bof를 활용한 다양한 해킹 기법이 존재한다.  
 
 <br />
-![그림1](/assets/ftz/level9/1.PNG) 
+![그림1](/assets/ftz/level9/1.PNG)  
 메모리 구조를 파악하기 위해 디버깅을 진행하여아 하는데 그냥은 권한이 없어 디버깅을 할 수 없다.  
 따라서 hint의 소스를 리다이렉션하거나 복사하여 tmp디렉터리에 바이너리 파일을 만들어 디버깅한다.  
 
@@ -78,7 +79,7 @@ buf2와 buf의 offset값(40-24)은 16임을 알 수 있다.
 buf2(10Byte)
 dummy(6Byte)
 buf(10Byte)
-...
+...  
 <br />
 ![그림2](/assets/ftz/level9/4.PNG)  
 페이로드는 아무값(16Byte) + "go"(2Byte)로 구성된다.  
