--- a/_posts/FTZ/2020-03-12-ftz-level11.md
+++ b/_posts/FTZ/2020-03-12-ftz-level11.md
@@ -68,7 +68,7 @@ what is shellcode? - 주로 기계어 코드로 이루어진 소프트웨어 취
 main+3 line을 보면 264byte의 공간을 메모리에 할당했을을 알 수 있다.  
 main+41 line을 보면 str의 주소는 ebp-264이며 str(256Byte)뒤에 8Byte의 dummy값이 있음을 알 수 있다.  
 
-**메모리 구조**  
+메모리구조|
 ---|
 str(256Byte)|
 dummy(8Byte)|
