--- a/_posts/FTZ/2020-03-08-ftz-level9.md
+++ b/_posts/FTZ/2020-03-08-ftz-level9.md
@@ -74,7 +74,7 @@ ebp-40의 값을 eax에 복사하여 push하고 fgets함수를 호출한다. 이
 ebp-24의 값을 eax에 복사하여 push하고 strncmp함수를 호출한다. 이는 buf의 주소가 ebp-24임을 알 수 있다.  
 buf2와 buf의 offset값(40-24)은 16임을 알 수 있다.  
 
-**메모리 구조**  
+메모리구조|
 |
 ---|
 buf2(10Byte)|
