--- a/_posts/FTZ/2020-03-08-ftz-level9.md
+++ b/_posts/FTZ/2020-03-08-ftz-level9.md
@@ -79,7 +79,8 @@ buf2와 buf의 offset값(40-24)은 16임을 알 수 있다.
 buf2(10Byte)|
 dummy(6Byte)|
 buf(10Byte)|
-...|
+sfp(4byte)|
+ret(4byte)| 
 <br />
 <br />
 ![그림2](/assets/ftz/level9/4.PNG)  
