--- a/_posts/FTZ/2020-03-12-ftz-level12.md
+++ b/_posts/FTZ/2020-03-12-ftz-level12.md
@@ -79,7 +79,7 @@ ret(4Byte)|
 
 <br />
 ![그림2](/assets/ftz/level12/2.PNG)  
-level11과 같은 방식으로 쉘코드를 환경변수에 등록하고 환경변수의 주소를 ret에 덮는 방식으로 공격을 시도.  
+쉘코드를 환경변수에 등록하고 환경변수의 주소를 ret에 덮는 방식으로 공격을 시도.  
 
 <br />
 ![그림3](/assets/ftz/level12/3.PNG)  
