--- a/_posts/FTZ/2020-03-12-ftz-level13.md
+++ b/_posts/FTZ/2020-03-12-ftz-level13.md
@@ -70,7 +70,7 @@ what is shellcode? - 주로 기계어 코드로 이루어진 소프트웨어 취
 권한문제가 없도록 tmp디렉터리에 attackme를 복사하고 attackme의 메모리 구조를 파악하기 위해 gdb를 사용하여 intel방식으로 디스어셈블 한다.   
 
 **어셈블리 분석**  
-main+3 line을 보면 sep에 0x418을 더하여 1048Byte의 공간을 할당하는것을 알 수 있다.  
+main+3 line을 보면 sep에 1048Byte의 공간을 할당하는것을 알 수 있다.  
 main+54 line을 보면 strcpy함수에 buf를 인자로 전달하기 위한 연산을 수행하고 있음을 알 수 있다.  
 따라서 buf의 주소는 ebp-1048.  
 main+69 line을 보면 ebp-12 를 0x1234567과 비교연산하고 있음을 알 수 있다.  
