--- a/_posts/FTZ/2020-03-12-ftz-level16.md
+++ b/_posts/FTZ/2020-03-12-ftz-level16.md
@@ -86,7 +86,7 @@ dummy(8Byte)|
 sfp(4Byte)|
 ret(4Byte)| 
 
-**void포인터 call이 shell홤수의 주소를 포인팅하도록 공격을 진행하면 shell을 얻을 수 있다.**  
+**void포인터 call이 shell함수의 주소를 포인팅하도록 공격을 진행하면 shell을 얻을 수 있다.**  
 
 <br />
 ![그림2](/assets/ftz/level16/2.PNG)  
