--- a/_posts/FTZ/2020-03-12-ftz-level18.md
+++ b/_posts/FTZ/2020-03-12-ftz-level18.md
@@ -12,11 +12,8 @@ FTZ란 Free Training Zone의 약자로 hackerschool에서 배포하는 워게임
 사용 linux 명령어  
 ls - 파일 내역 출력
 cat - 파일 내용 확인  
-gcc - gcc컴파일러로 컴파일하도록 하는 명령 
-vim - text editor  
 cp - 파일 또는 디렉터리 복사 명령  
-export - 환경변수 등록 명령  
-getenv - 환경변수를 모두 보는 명령  
+gdb - 디버깅 도구  
 
  [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
