--- a/_posts/FTZ/2020-03-12-ftz-level15.md
+++ b/_posts/FTZ/2020-03-12-ftz-level15.md
@@ -13,6 +13,7 @@ FTZ란 Free Training Zone의 약자로 hackerschool에서 배포하는 워게임
 ls - 파일 내역 출력
 cat - 파일 내용 확인  
 cp - 파일 또는 디렉터리 복사 명령  
+gdb - 디버깅 도구  
 
  [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
