--- a/_posts/FTZ/2020-03-12-ftz-level17.md
+++ b/_posts/FTZ/2020-03-12-ftz-level17.md
@@ -17,6 +17,7 @@ vim - text editor
 cp - 파일 또는 디렉터리 복사 명령  
 export - 환경변수 등록 명령  
 getenv - 환경변수를 모두 보는 명령  
+gdb - 디버깅 도구  
 
  [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
