--- a/_posts/FTZ/2020-03-14-ftz-level19.md
+++ b/_posts/FTZ/2020-03-14-ftz-level19.md
@@ -30,8 +30,6 @@ egrep - 파일에서 특정한 패턴을 찾는 명령어
 hint를 보기 전 attackme의 gid가 level19임을 확인하였다.  
 이는 level20의 권한으로 attackme를 실행할 수 없다는 뜻이고, 무언가의 방법으로 attackme에 level20의 set-uid를 걸어야 한다.  
 
-<br />
-
 **이전 문제들에서 봐왔듯이 setreuid(pm1,pm2); 형태의 set-uid를 설정하는 함수가 있고 이를 이용해보자.**  
 
 <br />
@@ -121,8 +119,8 @@ sfp(이전 ebp)|
 
 비정상적 호출 함수의 에필로그가 진행될 때 leave가 끝난 시점 esp가 인자2를 포인팅하게 된다.  
 -> mov esp, ebp로 esp와 ebp가 sfp를 가리키지만 pop ebp로 esp+4가 진행되어 인자 2를 포인팅.  
-그렇다면 ret이 진행되면서 인자2의 값을 pop해버린다.  
-따라서 RTL을 이용해 buffer over-flow공격을 진행하려면 ret(system함수 주소) + dummy + /bin/bash의 형태로 페이로드를 작성한다.  
+따라서 ret이 진행되면서 인자2의 값을 pop해버린다.  
+RTL을 이용해 buffer over-flow공격을 진행하려면 ret(system함수 주소) + dummy + /bin/bash의 형태로 페이로드를 작성한다.  
 
 #### RTL Chaining을 하려면?  
 setreuid와 system함수를 연계하여 호출하면 페이로드는  
@@ -133,8 +131,8 @@ setreuid와 system함수를 연계하여 호출하면 페이로드는
 **gadget은 ret으로 끝나는 연속된 명령을 의미**  
 **함수의 인자들을 정리하기 위해 gadget을 사용하는데 자세히 말하자면 우리가 입력한 next return address를 가리키기 위해 사용했던 인자들을 pop하고 esp를 next return address가 있는 스택에 맞추어 리턴하기 위해 사용한다.**  
 
-페이로드를 [buffer] + [sfp] + [setreuid함수 주소] + [gadget] + ["3100"] + ["3100"] + [system함수 주소] + [dummy] + [/bin/bash]로  
-구성하면 setreuid가 끝나고 esp는 gadget을 가리키게 된다.  
+[buffer] + [sfp] + [setreuid함수 주소] + [gadget] + ["3100"] + ["3100"] + [system함수 주소] + [dummy] + [/bin/bash]로  
+페이로드를 구성하면 setreuid가 끝나고 esp는 gadget을 가리키게 된다.  
 gadget을 pop pop ret을 가젯으로 사용하면 setreuid에 사용한 인자가 pop되며 esp는 system함수의 주소를 포인팅하며 ret(pop eip)를 하고,  
 system함수에 /bin/bash를 인자로 넣게 된다.  
 
