--- a/_posts/node.js/2020-08-11-Node.js Mysql.md
+++ b/_posts/node.js/2020-08-11-Node.js Mysql.md
@@ -29,13 +29,12 @@ $ npm init
 $ npm install mysql  
 
 **4. 데이터베이스에 테이블 생성**  
-테이블 구조|
----|---|---
-number|ssid|dBm|
+**테이블 구조**  
+|number|ssid|dBm|
 ...|...|...|  
 
-**5. main.js 코드작성**
-[예제] url~  
+**5. main.js 코드작성**  
+[예제소스](https://github.com/limjunho/node.js/tree/master/Mysql)
 
 #### 실행결과  
 <br />
