--- a/_posts/node.js/2020-08-11-Node.js client request receive.md
+++ b/_posts/node.js/2020-08-11-Node.js client request receive.md
@@ -42,15 +42,15 @@ $ npm init
 $ npm install express body-parser --save  
 
 **4. main.js 소스코드 작성**  
-[예제소스] url~  
+[예제소스](https://github.com/limjunho/node.js/tree/master/client_request(queryString))  
 
 #### 실행 결과  
 
 **POST(Linux에서 제공하는 curl명령 사용)**  
 <br />
-![그림1](/assets/Node.js/client request receive/1.png)  
+![그림1](/assets/Node.js/client_request_receive/1.png)  
   
 
 **GET(쿼리스트링을 통해서만 요청데이터 전송가능)**  
 <br />
-![그림2](/assets/Node.js/client request receive/2.png)  
+![그림2](/assets/Node.js/client_request_receive/2.png)  
