--- a/_posts/node.js/2020-08-11-Node.js install.md
+++ b/_posts/node.js/2020-08-11-Node.js install.md
@@ -11,7 +11,7 @@ Linux에서 node.js를 사용할 수 있도록 node.js를 설치하는 방법을
 
 ---
 
-### install ###  
+### install  
 node.js는 NVM(Node.js Version Manager)을 통해서 설치한다.  
 NVM은 이름과 같이 Node.js의 버전을 관리하는 기능을 한다.  
 
@@ -20,6 +20,8 @@ NVM은 이름과 같이 Node.js의 버전을 관리하는 기능을 한다.
 
 #### curl이 없는 경우  
 **sudo apt install curl**  
+
+<br />
 
 **NVM 설치확인1**  
 <br />
