--- a/_posts/node.js/2020-08-11-Node.js Mysql.md
+++ b/_posts/node.js/2020-08-11-Node.js Mysql.md
@@ -30,9 +30,9 @@ $ npm install mysql
 
 **4. 데이터베이스에 테이블 생성**  
 **테이블 구조**  
-|number|ssid|dBm|
-|---|---|---|
-|1..|APname...|RSSI...|  
+number|ssid|dBm|
+---|---|---|
+1..|APname...|RSSI...|  
 
 **5. main.js 코드작성**  
 [예제소스](https://github.com/limjunho/node.js/tree/master/Mysql)
