--- a/_posts/node.js/2020-08-11-Node.js queryString into DB.md
+++ b/_posts/node.js/2020-08-11-Node.js queryString into DB.md
@@ -1,9 +1,12 @@
 ---
-title: Node.js iasdf
+title: Node.js queryString into DB
 tags: Node.js
 ---
 
-Linux에서 node.js를 사용할 수 있도록 node.js를 설치하는 방법을 소개한다.  
+[클라이언트 요청 수신](https://limjunho.github.io/2020/08/11/Node.js-client-request-receive.html)에서 쿼리스트링을 사용.  
+[node.js mysql](https://limjunho.github.io/2020/08/11/Node.js-Mysql.html)에서 node.js로 mysql에 연동 및 데이터 입/출력.  
+
+이번 포스팅에서는 HTTP GET/POST에서 받은 쿼리스트링을 이용해 클라이언트에게 데이터를 받아 DB에 저장하는 방법을 소개한다.  
 
  [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
@@ -11,34 +14,43 @@ Linux에서 node.js를 사용할 수 있도록 node.js를 설치하는 방법을
 
 ---
 
-### install ###  
-node.js는 NVM(Node.js Version Manager)을 통해서 설치한다.  
-NVM은 이름과 같이 Node.js의 버전을 관리하는 기능을 한다.  
+### 모듈 install 및 DB에 데이터 삽입  
+**1. 디렉터리 생성**  
+$ mkdir queryString_into_DB  
 
-터미널에 아래의 명령어를 입력하여 설치한다.  
-**sudo curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh | bash**  
+**2. 생성 디렉터리로 이동 후 npm init진행**  
+$ cd database  
+$ npm init  
 
-#### curl이 없는 경우  
-**sudo apt install curl**  
+**3. 필요 모듈 설치**  
+$ npm install mysql  
+$ npm install express body-parser --save  
 
-**NVM 설치확인1**  
-<br />
-![그림1](/assets/Node.js/install/1.png)  
-사용자의 홈 디렉터리에 .nvm 숨김 디렉터리가 생성됨  
+**4. 데이터베이스에 테이블 생성**  
+**테이블 구조** 
 
-**NVM 설치확인2**  
-<br />
-![그림2](/assets/Node.js/install/2.png)  
-사용자의 홈 디렉터리에 .bashrc파일 마지막 부분에 추가내용 확인  
+number|ssid|dBm|
+---|---|---|
+1..|APname...|RSSI...|  
 
-**.bashrc에 추가된 내용을 $PATH에 적용하기 위해 터미널에 아래와 같이 명령**  
-source ~/.bashrc  
-또는 재부팅(sudo reboot)  
+**5. main.js 소스코드 작성**  
+[예제소스](url~)
 
-**9.3.0 version의 node.js설치를 위해 아래와 같이 명령**  
-**nvm install 9.3.0**  
+#### 실행결과
 
-**Node.js 설치확인**  
-<br />
-![그림3](/assets/Node.js/install/3.png)  
-터미널에 node -v명령으로 정상 설치 확인  
+**GET 방식(main.js)**
+![그림1](/assets/Node.js/queryString_into_DB/1.png)  
+쿼리스트링으로 전달한 키-값 쌍이 데이터베이스에 저장되었다.  
+
+**GET 방식(DB)**  
+![그림2](/assets/Node.js/queryString_into_DB/2.png)  
+DB에서 확인하여도 문제없이 저장됨을 알 수 있다.  
+
+
+**POST 방식(main.js)**
+![그림1](/assets/Node.js/queryString_into_DB/3.png)  
+쿼리스트링으로 전달한 키-값 쌍이 데이터베이스에 저장되었다.  
+
+**POST 방식(DB)**  
+![그림2](/assets/Node.js/queryString_into_DB/4.png)  
+DB에서 확인하여도 문제없이 저장됨을 알 수 있다.  
