--- a/_posts/node.js/2020-08-11-Node.js queryString into DB.md
+++ b/_posts/node.js/2020-08-11-Node.js queryString into DB.md
@@ -34,9 +34,9 @@ number|ssid|dBm|
 1..|APname...|RSSI...|  
 
 **5. main.js 소스코드 작성**  
-[예제소스](url~)
+[예제소스](https://github.com/limjunho/node.js/tree/master/queryString_into_DB)
 
-#### 실행결과
+#### 실행결과  
 
 **GET 방식(main.js)**
 ![그림1](/assets/Node.js/queryString_into_DB/1.png)  
@@ -47,7 +47,7 @@ number|ssid|dBm|
 DB에서 확인하여도 문제없이 저장됨을 알 수 있다.  
 
 
-**POST 방식(main.js)**
+**POST 방식(main.js)**  
 ![그림1](/assets/Node.js/queryString_into_DB/3.png)  
 쿼리스트링으로 전달한 키-값 쌍이 데이터베이스에 저장되었다.  
 
