Arduino MLX90614 Example

--- a/_posts/Arduino/2020-08-12-Arduino GY-906 온도센서.md
+++ b/_posts/Arduino/2020-08-12-Arduino GY-906 온도센서.md
@@ -76,5 +76,5 @@ void loop() {
 
 #### 측정 결과  
 ![그림3](/assets/Arduino/MLX90614/3.PNG)  
-측정 시작 후 손을 가져다된 뒤 다시 떼었을 때의 결과이다.  
+측정 시작 후 손을 가져다대고 다시 떼었을 때의 결과이다.  
 위의 결과처럼 오차가 조금 발생한다.   
