--- a/_posts/MySql/2020-08-27-MySql_DB.md
+++ b/_posts/MySql/2020-08-27-MySql_DB.md
@@ -3,7 +3,7 @@ title: MySql 데이터베이스 생성/삭제, 권한부여
 tags: MySql
 ---
 
-MySql 사용자 생성 및 삭제 간단 정리글   
+MySql 데이터베이스 생성 및 삭제 간단 정리글   
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
