--- a/_posts/Git/2020-08-28-Git사용법.md
+++ b/_posts/Git/2020-08-28-Git사용법.md
@@ -79,6 +79,11 @@ Changes to be committed:
 ```
 **스테이징된 파일은 커밋 직전 상태로 변경된다.**  
 
+**수정 전 상태로 되돌리기**
+```bash
+$ git reset --hard
+```
+
 ### 커밋  
 
 커밋(commit)은 깃이 폴더의 변경 내용을 저장하는 단위이다.  
