React useMemo Example

--- a/_posts/React/2020-09-21-useMemo.md
+++ b/_posts/React/2020-09-21-useMemo.md
@@ -5,6 +5,9 @@ tags: React
 
 **성능 최적화를 위하여 연산된 값을 재사용하는 useMemo예제**  
 
+[React Array Example코드](https://github.com/limjunho/React/tree/master/array_ex)  
+예제 소스코드(github)
+
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
 <!--more-->
