--- a/_posts/React/2020-09-23-React.memo Example.md
+++ b/_posts/React/2020-09-23-React.memo Example.md
@@ -218,22 +218,24 @@ function App() {
     []
   );
 
-  const onUpdate = id => {
-    setUsers(
-      users.map(user =>
-        user.id === id ?
-          { id: nextId.current, username: username, phonenumber: phonenumber }
-          : user
-      )
-    );
+  const onUpdate = useCallback(
+    id => {
+      setUsers(
+        users => users.map(user =>
+          user.id === id ?
+            { id: id, username: username, phonenumber: phonenumber }
+            : user
+        )
+      );
 
-    setInputs({
-      username: '',
-      phonenumber: ''
-    });
+      setInputs({
+        username: '',
+        phonenumber: ''
+      });
 
-    nextId.current += 1;
-  };
+    },
+    [username, phonenumber]
+  );
 
   const count = useMemo(() => countUsers(users), [users]);
 
