--- a/_posts/node.js/2020-10-10-Node.js Restful API.md
+++ b/_posts/node.js/2020-10-10-Node.js Restful API.md
@@ -93,6 +93,7 @@ Accept header를 사용하자.
 |:----------|:----------:|
 |200|클라이언트의 요청을 정상 수행|
 |201|클라이언트가 어떠한 리소스 생성을 요청, 해당 리소스가 성공적으로 생성(POST를 통한 리소스 생성 작업 시)|
+
 <br />
 
 |상태코드|내용|
@@ -103,6 +104,7 @@ Accept header를 사용하자.
 |403|유저 인증상태와 관계 없이 응답하고 싶지 않은 리소스를 클라이언트가 요청했을 때 사용하는 응답 코드|
 ||(403 보다는 400이나 404를 사용할 것을 권고. 403 자체가 리소스가 존재한다는 뜻이기 때문에)|
 |405|클라이언트가 요청한 리소스에서는 사용 불가능한 Method를 이용했을 경우 사용하는 응답 코드|
+
 <br />
 
 |상태코드|내용|
@@ -119,7 +121,7 @@ $ npm install express
 ```
 **express 설치**  
 
-```node.js
+```javascript
 const express = require("express");
 const app = express();
 
