--- a/_posts/node.js/2020-10-10-Node.js Restful API.md
+++ b/_posts/node.js/2020-10-10-Node.js Restful API.md
@@ -92,7 +92,8 @@ Accept header를 사용하자.
 |상태코드|내용|
 |:----------|:----------:|
 |200|클라이언트의 요청을 정상 수행|
-|201|클라이언트가 어떠한 리소스 생성을 요청, 해당 리소스가 성공적으로 생성(POST를 통한 리소스 생성 작업 시)|
+|201|클라이언트가 어떠한 리소스 생성을 요청, 해당 리소스가 성공적으로 생성|
+||(POST를 통한 리소스 생성 작업 시)|
 
 <br />
 
