--- a/_posts/Git/2020-11-14-Fork저장소 최신 원본으로 동기화.md
+++ b/_posts/Git/2020-11-14-Fork저장소 최신 원본으로 동기화.md
@@ -4,8 +4,9 @@ tags: Git
 ---
 
 3자 개발자의 공헌을 받는 방법으로, Github에서 주로 사용하는 방식이 fork와 pull request이다.  
-**fork는 원본 저장소를 내 github 저장소로 복사하는 것이다.** 내 저장소로 복사된 것은, 내가 마음대로 수정해서 업데이트 할 수 있다.  
-그 다음에 **Pull request를 통해 나의 업데이트를 원본 저장소에서 작업하는 개발자들에게 나의 업데이트를 적용하도록 요청할 수 있다.**  
+**fork는 원본 저장소를 내 github 저장소로 복사하는 것.** fork는 내가 마음대로 수정해서 업데이트 할 수 있다.  
+그 다음에 **Pull request(PR)를 통해 나의 업데이트를 원본 저장소에서 작업하는 개발자들에게 나의 업데이트를 적용하도록 요청할 수 있다.**  
+
 
 **원본저장소가 계속 업데이트 됐으면 어떻게 fork를 최신 원본과 동기화 하는가**  
 
@@ -24,28 +25,28 @@ tags: Git
 
 ---
 
-### 기존의 fork와 원본 저장소를 동기화  
+### fork와 원본 저장소를 동기화  
 
 ```bash
 $ git remote -v
 ```
 **현재 자신의 github 저장소 주소 확인**  
 
-#### 1.  
+#### 1. 원본 (upstream) 저장소의 원격 주소를 추가  
 ```bash
 $ git remote add upstream https://github.com/ORIGINAL_OWNER/ORIGINAL_REPOSITORY.git
 ```
-원본 (upstream) 저장소의 원격 주소를 추가 한다. upstream대신 다른 이름을 써도 상관없다만 보통 upstream사용.
+upstream대신 다른 이름을 써도 상관없다만 보통 upstream사용.
 
 다시 git remote -v로 원격 주소가 잘 추가되었는지 확인하고 다음으로 넘어간다.  
 
-#### 2. 
+#### 2. 로컬의 fork에 원본 저장소를 fetch  
 ```bash
 $ git fetch upstream
 ```
 이 과정을 통해 원본 저장소 branch들에 있는 업데이트들이 로컬의 upstream/branch들로 복사가 된다.  
 
-#### 3.  
+#### 3. fetch된 코드들을 merge.  
 ```bash
 $ git checkout master
 ```
