--- a/_posts/Git/2020-11-14-Fork저장소 최신 원본으로 동기화.md
+++ b/_posts/Git/2020-11-14-Fork저장소 최신 원본으로 동기화.md
@@ -51,15 +51,16 @@ $ git fetch upstream
 $ git checkout master
 ```
 **master로 checkout**  
+<br />
 
 ```
 error: pathspec 'master' did not match any file(s) known to git. 
 ```
-만약 위와같은 에러가 발생한다면
+만약 위와같은 에러가 발생한다면 아래의 방법으로 해결  
 ```bash
 $ git checkout -b master --track origin/master
 ```
-로 해결한다.  
+<br />
 
 ```bash
 $ git merge upstream/master
