--- a/_posts/Git/2020-10-07-Github 팀원초대.md
+++ b/_posts/Git/2020-10-07-Github 팀원초대.md
@@ -32,7 +32,7 @@ Contributor는 Pull Request를 통해 누구나 시도할 수 있지만, **Colla
 ### Collaborator 추가하기  
 
 #### 1. 프로젝트 관리자가 해당 프로젝트의 설정에서 Manage access탭으로 이동  
-![그림1](/assets/Github/Github_팀원초대/1.PNG)  
+![그림1](/assets/Git/Github_팀원초대/1.PNG)  
 
 #### 2. invite a collaborator 클릭 후 초대할 사람의 Username을 빈칸에 입력  
 #### 3. 검색 결과에서 초대할 사람을 선택  
