--- a/_posts/Baekjoon/2020-12-23-10718.md
+++ b/_posts/Baekjoon/2020-12-23-10718.md
@@ -1,5 +1,5 @@
 ---
-title: 단계별문제 - 입출력과 사칙연산 2557번
+title: 단계별문제 - 입출력과 사칙연산 10718번
 tags: Baekjoon
 ---
 
@@ -9,7 +9,7 @@ tags: Baekjoon
 
 ---
 ### 문제   
-![그림1](/assets/Baekjoon/2577/1.PNG)  
+![그림1](/assets/Baekjoon/10718/1.PNG)  
 
 ### 코드
 ```cpp
@@ -19,7 +19,8 @@ using namespace std;
  
 int main(void)
 {
-    cout << "Hello World!" << endl;
+    cout << "강한친구 대한육군" << endl;
+    cout << "강한친구 대한육군" << endl;
     
     return 0;
 }
