--- a/_posts/Baekjoon/2020-12-23-1000.md
+++ b/_posts/Baekjoon/2020-12-23-1000.md
@@ -1,5 +1,5 @@
 ---
-title: Baekjoon 2557번
+title: Baekjoon 1000번
 tags: Baekjoon
 ---
 
@@ -8,8 +8,9 @@ tags: Baekjoon
 <!--more-->
 
 ---
-### Problem     
-![그림1](/assets/Baekjoon/2577/1.PNG)  
+### Problem  
+   
+![그림1](/assets/Baekjoon/1000/1.PNG)  
 
 ### Code  
 ```cpp
@@ -19,7 +20,11 @@ using namespace std;
  
 int main(void)
 {
-    cout << "Hello World!" << endl;
+    int A;
+    int B;
+
+    cin >> A >> B;
+    cout << A + B << endl;
     
     return 0;
 }
