--- a/_posts/Baekjoon/2020-12-23-10172.md
+++ b/_posts/Baekjoon/2020-12-23-10172.md
@@ -8,10 +8,10 @@ tags: Baekjoon
 <!--more-->
 
 ---
-### 문제   
+### Problem   
 ![그림1](/assets/Baekjoon/10172/1.PNG)  
 
-### 코드
+### Code  
 ```cpp
 #include <iostream> 
 
