--- a/_posts/Baekjoon/2020-12-23-2753.md
+++ b/_posts/Baekjoon/2020-12-23-2753.md
@@ -49,3 +49,21 @@ int main(void)
     return 0;
 }
 ```
+
+### Short Code
+```cpp
+#include <iostream>
+
+using namespace std;
+
+int main(void)
+{
+    int year;
+
+    cin >> year;
+
+    cout << (year % 4 == 0 && (year % 100 || year % 400 == 0) ? 1 : 0);
+
+    return 0;
+}
+```
