--- a/_posts/Baekjoon/2020-12-28-10950.md
+++ b/_posts/Baekjoon/2020-12-28-10950.md
@@ -1,5 +1,5 @@
 ---
-title: Baekjoon 2739
+title: Baekjoon 10950
 tags: Baekjoon
 ---
 
@@ -10,7 +10,7 @@ tags: Baekjoon
 ---
 ### Problem  
    
-![그림1](/assets/Baekjoon/2739/1.PNG)  
+![그림1](/assets/Baekjoon/10950/1.PNG)  
 
 ### Code  
 ```cpp
@@ -20,13 +20,15 @@ using namespace std;
 
 int main()
 {
-    int N;
+    int T;
+    int A, B;
 
-    cin >> N;
+    cin >> T;
 
-    for (size_t i = 1; i < 10; i++)
+    for (size_t i = 0; i < T; i++)
     {
-        cout << N << " * " << i << " = " << N * i << endl;
+        cin >> A >> B;
+        cout << A + B << endl;
     }
 
     return 0;
