--- a/_posts/Baekjoon/2020-12-28-8393.md
+++ b/_posts/Baekjoon/2020-12-28-8393.md
@@ -1,7 +1,7 @@
 ---
-title: Baekjoon 8393¹ø
+title: Baekjoon 8393ë²ˆ
 tags: Baekjoon
----
+--- 
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
@@ -10,7 +10,7 @@ tags: Baekjoon
 ---
 ### Problem  
    
-![±×¸²1](/assets/Baekjoon/8393/1.PNG)  
+![ê·¸ë¦¼1](/assets/Baekjoon/8393/1.PNG)  
 
 ### Code  
 ```cpp
