--- a/_posts/Baekjoon/2020-12-28-10950.md
+++ b/_posts/Baekjoon/2020-12-28-10950.md
@@ -1,5 +1,5 @@
 ---
-title: Baekjoon 10950¹ø 
+title: Baekjoon 10950ë²ˆ
 tags: Baekjoon
 ---
 
@@ -10,7 +10,7 @@ tags: Baekjoon
 ---
 ### Problem  
    
-![±×¸²1](/assets/Baekjoon/10950/1.PNG)  
+![ê·¸ë¦¼1](/assets/Baekjoon/10950/1.PNG)  
 
 ### Code  
 ```cpp
