--- a/_posts/Baekjoon/2020-12-28-2739.md
+++ b/_posts/Baekjoon/2020-12-28-2739.md
@@ -1,5 +1,5 @@
 ---
-title: Baekjoon 2739¹ø 
+title: Baekjoon 2739ë²ˆ
 tags: Baekjoon
 ---
 
@@ -10,7 +10,7 @@ tags: Baekjoon
 ---
 ### Problem  
    
-![±×¸²1](/assets/Baekjoon/2739/1.PNG)  
+![ê·¸ë¦¼1](/assets/Baekjoon/2739/1.PNG)  
 
 ### Code  
 ```cpp
