--- a/_posts/Baekjoon/2020-12-28-11022.md
+++ b/_posts/Baekjoon/2020-12-28-11022.md
@@ -1,5 +1,5 @@
 ---
-title: Baekjoon 11021번
+title: Baekjoon 11022번
 tags: Baekjoon
 ---
 
@@ -10,7 +10,7 @@ tags: Baekjoon
 ---
 ### Problem  
    
-![그림1](/assets/Baekjoon/11021/1.PNG)  
+![그림1](/assets/Baekjoon/11022/1.PNG)  
 
 ### Code  
 ```cpp
@@ -26,10 +26,9 @@ int main()
     for (size_t i = 1; i <= T; i++)
     {
         scanf("%d %d", &A, &B);
-        printf("Case #%d: %d\n", i, A + B);
+        printf("Case #%d: %d + %d = %d\n", i, A, B, A + B);
     }
 
     return 0;
 }
-
 ```
