--- a/_posts/React/2020-11-23-Fetch함수.md
+++ b/_posts/React/2020-11-23-Fetch함수.md
@@ -114,3 +114,12 @@ fetch("http://host.../u/r/i/", {
         });
 ```
 **위의 코드는 ```"http://host.../u/r/i/"```에 GET요청을 보내 응답받은 데이터를 랜더링하는 코드이다.**  
+
+### then 함수  
+
+자바스크립트에서 함수는 동기함수, 비동기 함수로 나뉜다. 우리가 작성한 코드들은 위에서 아래로 순차적으로 코드가 실행되고 하나의 코드가 종료되지 않는다면 다음 코드로 넘어가지 않는다. 이것이 동기함수이다.  
+API를 호출할 때, 사용하는 **fetch 함수는 대표적인 비동기함수이다.** 그렇기 때문에 API호출하는 과정이 끝나지 않더라도 자동적으로 다음 코드로 넘어간다.  
+하지만 **API로부터 받아온 정보를 사용할 필요가 있는 경우에 .then함수를 쓰는 것이다.**
+
+> 참고 
+> https://velog.io/@daybreak/React-Fetch%ED%95%A8%EC%88%98#response
