--- a/_posts/Git/2020-11-28-Markdown사용법.md
+++ b/_posts/Git/2020-11-28-Markdown사용법.md
@@ -3,7 +3,7 @@ title: Markdown사용법(링크)
 tags: Git
 ---
 
-> https://gist.github.com/ihoneymon/652be052a0727ad59601  
+> [markdown 작성법](https://gist.github.com/ihoneymon/652be052a0727ad59601)  
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
