--- a/_posts/Baekjoon/2020-12-30-5622.md
+++ b/_posts/Baekjoon/2020-12-30-5622.md
@@ -12,6 +12,9 @@ tags: Baekjoon
    
 ![그림1](/assets/Baekjoon/5622/1.PNG)  
 
+### Solution  
+* 많은 if문을 사용하지 않기 위해 alpha배열을 각 알파벳에 해당하는 값을 초기화해두고, ascii코드와 alpha배열의 index를 이용하여 문제를 해결  
+
 ### Code  
 ```cpp
 #include <cstdio>
