--- a/_posts/Baekjoon/2020-12-30-5622.md
+++ b/_posts/Baekjoon/2020-12-30-5622.md
@@ -30,11 +30,11 @@ int main()
     for (size_t i = 0; i < 16; i++)
     {
         // 단어가 끝나면 for문 탈출
-        if(word[i]=='\0'){
+        if(word[i] == '\0'){
             break;
         }
 
-        index = (int)word[i]-65;
+        index = (int)word[i] - 65;
         minimumTime += alpha[index];
 
         /* code */
