--- a/_posts/MySql/2021-01-21-MySql 제약조건.md
+++ b/_posts/MySql/2021-01-21-MySql 제약조건.md
@@ -14,25 +14,25 @@ tags: MySql
 
 ### 무결성  
 
-* null  
+* **null**  
 필수 입력 사항이 아니며 데이터 값이 비워져있어도 상관없다.  
 
-* not null  
+* **not null**  
 필수 입력 사항. 데이터값이 무조건 있어야 한다.
 
-* unique  
+* **unique**  
 같은 테이블 내에서 중복이 안되는 제약조건으로 고유한 데이터들의 제약조건이다.  
 
-* primary key  
+* **primary key**  
 not null 과 unique가 합쳐진 제약조건. 데이터들을 식별할때 쓰이는 제약조건. pk 라고도 불린다.  
 
-* foreign key  
+* **foreign key**  
 외래키이다. 다른 테이블을 참조하며 참조하는 테이블에서 존재하는 값만 사용 가능하다.  
 
-* check  
+* **check**  
 주어진 조건에 해당하는 값만 입력 가능하다. 조건에 해당하지 않는 데이터가 들어오면 오류를 발생시킨다.  
 
-* default  
+* **default**  
 기본값을 설정한다.
 
 ### 제약조건 확인  
