--- a/_posts/Baekjoon/2021-01-20-1316.md
+++ b/_posts/Baekjoon/2021-01-20-1316.md
@@ -1,6 +1,6 @@
 ---
 title: Baekjoon 1316번
-tags: Baekjoon
+tags: Algorithm
 ---
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
