--- a/_posts/Baekjoon/2020-12-24-2753.md
+++ b/_posts/Baekjoon/2020-12-24-2753.md
@@ -1,6 +1,6 @@
 ---
 title: Baekjoon 2753번
-tags: Baekjoon
+tags: Algorithm
 ---
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
