--- a/_posts/Baekjoon/2020-12-28-10871.md
+++ b/_posts/Baekjoon/2020-12-28-10871.md
@@ -1,6 +1,6 @@
 ---
 title: Baekjoon 10871번
-tags: Baekjoon
+tags: Algorithm
 ---
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
