--- a/_posts/Baekjoon/2020-12-29-4673.md
+++ b/_posts/Baekjoon/2020-12-29-4673.md
@@ -1,6 +1,6 @@
 ---
 title: Baekjoon 4673번
-tags: Baekjoon
+tags: Algorithm
 ---
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
