--- a/_posts/Baekjoon/2021-01-22-2869.md
+++ b/_posts/Baekjoon/2021-01-22-2869.md
@@ -1,6 +1,6 @@
 ---
 title: Baekjoon 2869번
-tags: Baekjoon
+tags: Algorithm
 ---
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
