--- a/_posts/node.js/2021-02-18-Node.js Express-router.md
+++ b/_posts/node.js/2021-02-18-Node.js Express-router.md
@@ -1,6 +1,6 @@
 ---
 title: Node.js Express router
-tags: Node.js MySql
+tags: Node.js
 ---
 
 express없이 라우터를 만들면 요청 메서드와 주소별로 분기 처리하여 코드가 매우 복잡하다.  
