--- a/_posts/C/2020-07-06-C_procfs.md
+++ b/_posts/C/2020-07-06-C_procfs.md
@@ -29,4 +29,4 @@ tags: C
 
 ### example code  
 
-[Github](https://github.com/limjunho/C/tree/master/procfs)  
+[Github](https://github.com/limjunho/C/tree/master/procfs) Make파일 및 procfs생성 코드, proc file을 읽는 코드  
