--- a/_posts/Network/2021-04-17-TCP_UDP.md
+++ b/_posts/Network/2021-04-17-TCP_UDP.md
@@ -119,7 +119,7 @@ Streaming 서비스에 불리하다.(손실된 경우 재전송 요청을 하므
 |source port|데이터를 보내는 애플리케이션의 포트 번호|16 bits|
 |destination port|데이터를 받을 애플리케이션의 포트 번호|16 bits|
 |length|UDP 헤더와 데이터의 총 길이|16 bits|
-|checksum||16 bits|
+|checksum|데이터 오류 검사에 사용|16 bits|
 
 ## TCP vs UDP  
 
