--- a/_posts/Network/2021-04-17-TCP_UDP.md
+++ b/_posts/Network/2021-04-17-TCP_UDP.md
@@ -147,8 +147,7 @@ Streaming 서비스에 불리하다.(손실된 경우 재전송 요청을 하므
 |연결이 성공해야 통신 가능(연결형 프로토콜)|비연결형 프로토콜(연결 없이 통신이 가능)|
 |데이터의 경계를 구분하지 않음(Byte-Stream Service)|데이터의 경계를 구분함(Datagram Service)|
 |신뢰성 있는 데이터 전송(데이터의 재전송 존재)|비신뢰성 있는 데이터 전송(데이터의 재전송 없음)|
-|일 대 일(Unicast) 통신|일 대 일(Unicast), 일 대 다(Broadcast), 다 대 다(Multicast) 통신
-|
+|일 대 일(Unicast) 통신|일 대 일(Unicast), 일 대 다(Broadcast), 다 대 다(Multicast) 통신|
 
 ## 참고
 
