--- a/_posts/Network/2021-04-17-socket.md
+++ b/_posts/Network/2021-04-17-socket.md
@@ -6,7 +6,7 @@ tags: Network Python
 ## 개요  
 
 TCP와 UDP의 전송 방식이 다른것처럼, 소켓통신에도 방식이 다르다. 데이터 타입은 TCP는 Stream 방식이고 UDP는 Datagram 방식이다.  
-본 포스팅에서는 클라이언트와 서버를 만들어 TCP/UDP Socket 통신을 구현한다.
+본 문서에서는 클라이언트와 서버를 만들어 TCP/UDP Socket 통신을 구현한다.
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
