--- a/_posts/Linux/2021-04-20-sk_buff.md
+++ b/_posts/Linux/2021-04-20-sk_buff.md
@@ -20,7 +20,7 @@ tags: Linux
 sk_buff는 /linux/skbuff.h 파일에 정의되어 있다.  
 [skbuff.h](https://elixir.bootlin.com/linux/latest/source/include/linux/skbuff.h)
 <details>
-<summary>struct sk_buff {}</summary>
+<summary>struct sk_buff {...}</summary>
 <div markdown="1">       
 
 ```c
