--- a/_posts/Linux/2021-04-20-sk_buff.md
+++ b/_posts/Linux/2021-04-20-sk_buff.md
@@ -22,6 +22,9 @@ sk_buff는 /linux/skbuff.h 파일에 정의되어 있다.
 <details>
 <summary>struct sk_buff {...}</summary>
 <div markdown="1">       
+<style>
+    *:focus { outline:none; }
+</style>
 
 ```c
 struct sk_buff {
