--- a/_posts/Linux/2021-04-20-Snull.md
+++ b/_posts/Linux/2021-04-20-Snull.md
@@ -620,6 +620,85 @@ void snull_rx(struct net_device *dev, struct snull_packet *pkt)
 
     * 패킷 수신의 마지막 단계로 netif_rx(skb)함수를 사용하여 네트워크 계층으로 패킷을 전송한다.
 
+### 기타
+
+* **프로그램의 개인 데이터는 snull_priv를 정의한다.**
+```c
+/*
+ * This structure is private to each device. It is used to pass
+ * packets in and out, so there is place for a packet
+ */
+
+struct snull_priv {
+	struct net_device_stats stats;
+	int status;
+	struct snull_packet *ppool;
+	struct snull_packet *rx_queue;  /* List of incoming packets */
+	int rx_int_enabled;
+	int tx_packetlen;
+	u8 *tx_packetdata;
+	struct sk_buff *skb;
+	spinlock_t lock;
+	struct net_device *dev;
+	struct napi_struct napi;
+};
+```
+
+* **snull_packet 구조는 송수신 데이터를 저장하는 데 사용한다.**
+```c
+/*
+ * A structure representing an in-flight packet.
+ */
+struct snull_packet {
+	struct snull_packet *next;
+	struct net_device *dev;
+	int	datalen;
+	u8 data[ETH_DATA_LEN];
+};
+```
+
+* **rx_queue는 장치의 수신 대기열이며 작업 기능은 아래와 같다.**
+```c
+void snull_enqueue_buf(struct net_device *dev, struct snull_packet *pkt)
+{
+	unsigned long flags;
+	struct snull_priv *priv = netdev_priv(dev);
+
+	spin_lock_irqsave(&priv->lock, flags);
+	pkt->next = priv->rx_queue;  /* FIXME - misorders packets */
+	priv->rx_queue = pkt;
+	spin_unlock_irqrestore(&priv->lock, flags);
+}
+
+struct snull_packet *snull_dequeue_buf(struct net_device *dev)
+{
+	struct snull_priv *priv = netdev_priv(dev);
+	struct snull_packet *pkt;
+	unsigned long flags;
+
+	spin_lock_irqsave(&priv->lock, flags);
+	pkt = priv->rx_queue;
+	if (pkt != NULL)
+		priv->rx_queue = pkt->next;
+	spin_unlock_irqrestore(&priv->lock, flags);
+	return pkt;
+}
+```
+
+* **rx_int_enabled는 수신 인터럽트를 활성화 또는 비활성화하는 데 사용한다.**
+```c
+/*
+ * Enable and disable receive interrupts.
+ */
+static void snull_rx_ints(struct net_device *dev, int enable)
+{
+	struct snull_priv *priv = netdev_priv(dev);
+	priv->rx_int_enabled = enable;
+}
+```
 ## 참고
 
 > [Snull 디바이스 드라이버 - pmj0403](https://pmj0403.tistory.com/entry/Snull-%EB%94%94%EB%B0%94%EC%9D%B4%EC%8A%A4-%EB%93%9C%EB%9D%BC%EC%9D%B4%EB%B2%84)  
+> [Linux 네트워크 드라이버 예 : snull 네트워크 인터페이스 (1)](https://www.programmersought.com/article/53434287986/)  
+> [include/linux/netdevice.h](https://elixir.bootlin.com/linux/v5.10/source/include/linux/netdevice.h)  
+> [include/linux/skbuff.h](https://elixir.bootlin.com/linux/latest/source/include/linux/skbuff.h)
