--- a/_posts/Linux/2021-04-20-Snull.md
+++ b/_posts/Linux/2021-04-20-Snull.md
@@ -699,6 +699,6 @@ static void snull_rx_ints(struct net_device *dev, int enable)
 ## 참고
 
 > [Snull 디바이스 드라이버 - pmj0403](https://pmj0403.tistory.com/entry/Snull-%EB%94%94%EB%B0%94%EC%9D%B4%EC%8A%A4-%EB%93%9C%EB%9D%BC%EC%9D%B4%EB%B2%84)  
-> [Linux 네트워크 드라이버 예 : snull 네트워크 인터페이스 (1)](https://www.programmersought.com/article/53434287986/)  
+> [Linux network driver example: snull network interface (1)](https://www.programmersought.com/article/53434287986/)  
 > [include/linux/netdevice.h](https://elixir.bootlin.com/linux/v5.10/source/include/linux/netdevice.h)  
 > [include/linux/skbuff.h](https://elixir.bootlin.com/linux/latest/source/include/linux/skbuff.h)
