--- a/_posts/Programming/2021-05-05-binding.md
+++ b/_posts/Programming/2021-05-05-binding.md
@@ -16,7 +16,7 @@ int num = 123;
 * num : 이름
 * 123 : 값
 
-이처럼 자료형, 이름, 값에 각각 int, num, 123이라는 구체적인 값을 할당하는 과정을 바인딩(Binding)이라 한다.  
+이처럼 자료형, 이름, 값에 각각 int, num, 123이라는 **구체적인 값을 할당하는 과정을 바인딩(Binding)**이라 한다.  
 
 또한 함수에서도 바인딩이 일어나는데, 이때 바인딩은 어떤 코드에서 함수를 호출할 때 그 해당 함수가 위치한 메모리 주소로 연결해주는 것을 의미한다.  
 
@@ -46,7 +46,7 @@ int n;
 
 **실행 시간(run time) 중에 일어나며, 프로그램 실행 도중 변경 가능**  
 
-인터프리터 언어인 Python을 대표적으로 들 수 있다.  
+인터프리터 언어인 Python을 대표적인 예로 들 수 있다.  
 ```python
 num=10 
 ```
