--- a/_posts/Socket/2021-05-10-htons.md
+++ b/_posts/Socket/2021-05-10-htons.md
@@ -11,7 +11,7 @@ tags: Socket C
 
 이런 문제를 해결하기 위해서 **데이터 통신을 할때는 명시적으로 네트워크 byte order을 따르도록 데이터의 byte order를 변경한다. 네트워크 byte order는 Big Endiasn을 따른다.**  
 
-원격 호스트와 데이터 통신을 하길 원한다면 보낼 때 네트워크 byte order로, 받았을 때는 호스트 byteorder로 변경한다.  
+원격 호스트와 데이터 통신을 하길 원한다면 보낼 때 네트워크 byte order로, 받았을 때는 호스트 byte order로 변경한다.  
 
 본 문서에서는 byte oder를 변경해주는 함수들을 정리한다.   
 
@@ -59,11 +59,11 @@ unsigned long int ntohl(unsigned long int hostshort);
 unsigned short int ntohs(unsigned short int hostshort);
 ```
 
-ntohs()함수는 short intger 데이터를 호스트 byte order로 변경한다.
+**ntohs()함수는 short intger 데이터를 호스트 byte order로 변경한다.**
 
 ## return
 
-네트워크 byte order된 2바이트 값을 넘겨준다.
+**네트워크 byte order된 2바이트 값을 넘겨준다.**
 
 ## example code
 
