--- a/_posts/Socket/2021-05-10-c_socket.md
+++ b/_posts/Socket/2021-05-10-c_socket.md
@@ -17,27 +17,27 @@ tags: Socket C
 
 ### Server
 
-1. socket() - socket 생성
+1. **socket() - socket 생성** 
 	* 만들어진 server_socket 은 단지 socket discriptor 에 불과함
-2. bind() - 생성한 socket에 IP addr, portnumber 를 할당하여 커널에 server socket으로 등록
+2. **bind() - 생성한 socket에 IP addr, portnumber 를 할당하여 커널에 server socket으로 등록**
 	* 커널에 등록해야 다른 시스템과 통신할 수 있는 상태가 된다.
 	* bind 에 사용할 구조체는 sockaddr_in 구조체 ([Socket sockaddr, sockaddr_in, sockaddr_un](https://limjunho.github.io/2021/05/10/socketaddr.html))
-3. listen() -  server socket 을 통해 클라이언트의 접속 요청을 확인
-4. accept() - 클라이언트 접속 요청 대기 및 수락, 클라이언트와의 통신을 위한 새 socket 생성
+3. **listen() -  server socket 을 통해 클라이언트의 접속 요청을 확인**
+4. **accept() - 클라이언트 접속 요청 대기 및 수락, 클라이언트와의 통신을 위한 새 socket 생성**
 	* accept() 로 접속 요청을 수락하면 클라이언트와 통신하기 위해 커널이 소켓을 자동으로 생성한다.
-5. read()/write() - client socket 과 데이터 송수신
+5. **read()/write() - client socket 과 데이터 송수신**
 	* read() 를 이용하여 클라이언트로부터 전송된 자료 수신한다.
 		* 클라이언트로부터 전송된 자료가 없다면 송신할 때 까지 대기한다.
 	* write() 를 이용하여 클라이언로 자료를 송신한다.
-6. close() - 통신이 종료된 clinet socket 을 소멸
+6. **close() - 통신이 종료된 clinet socket 을 소멸**
 
 ### Client
 
-1. socket() - socket 생성
-2. connect() - server 로 연결 시도
+1. **socket() - socket 생성**
+2. **connect() - server 로 연결 시도**
 	* 주소 정보에 서버의 주소와 포트번호를 지정하고 서버와 연결 시도.
-3. read()/write() socket 으로 데이터 송수신
-4. close() - 통신을 완료하면 socket 을 소멸
+3. **read()/write() socket 으로 데이터 송수신**
+4. **close() - 통신을 완료하면 socket 을 소멸**
 
 ## TCP Server example
 
@@ -158,18 +158,18 @@ int main( int argc, char **argv){
 
 ### Server
 
-1. socket() - socket 생성
-2. bind() - 생성한 socket에 IP addr, portnumber 를 할당하여 커널에 server socket으로 등록
-3. recvfrom() - 클라이언트의 데이터를 수신
-4. sendto() - 클라이언트에게 수신된 데이터를 전송
-5. close() - 소켓 연결 종료
+1. **socket() - socket 생성**
+2. **bind() - 생성한 socket에 IP addr, portnumber 를 할당하여 커널에 server socket으로 등록**
+3. **recvfrom() - 클라이언트의 데이터를 수신**
+4. **sendto() - 클라이언트에게 수신된 데이터를 전송**
+5. **close() - 소켓 연결 종료**
 
 ### Client
 
-1. socket() - socket 생성
-2. sendto() - 클라이언트에게 수신된 데이터를 전송
-3. recvfrom() - 클라이언트의 데이터를 수신
-4. close() - 소켓 연결 종료
+1. **socket() - socket 생성**
+2. **sendto() - 클라이언트에게 수신된 데이터를 전송**
+3. **recvfrom() - 클라이언트의 데이터를 수신**
+4. **close() - 소켓 연결 종료**
 
 ## UDP Server example
 
