--- a/_posts/Baekjoon/2021-05-11-1011.md
+++ b/_posts/Baekjoon/2021-05-11-1011.md
@@ -12,68 +12,58 @@ tags: Algorithm
    
 ![그림1](/assets/Baekjoon/1011/1.PNG)  
 
-### Solution  
 
+### Solution
 
+|distance|warp|max spped|result|
+|:--------:|:----:|:---------:|:------:|
+|1|1|1|1|
+|4|3|2|121|
+|9|5|3|12321|
+|16|7|4|1234321|
+|25|9|5|123454321|
+|N^2|2*N-1|square(N)|12345...N....54321|
+
+**distance가 18인 경우**
+
+1. distance를 넘지 않는 N을 구한다.
+    * N = 4
+2. distance - N*N
+    * 18 - 16 = 2
+3. distance가 16인 경우 7번의 워프를 진행한다. 따라서 2광년을 이동하기 위한 이동 횟수를 더해주면 최종 워프 횟수이다.  
+    * 남은 거리 / N 을 올림수 처리하여 구한다.
 
 ### Code  
 ```cpp
 #include <iostream>
-#include <string>
-#include <stack>
+#include <cmath>
 
 using namespace std;
 
 int main()
 {
-    int num1[10001], num2[10001];
-    int sum;
-    string A, B, tmp;
-    stack<int> result;
+    int T, x, y;
+    int result, distance;
 
-    cin >> A >> B;
+    cin >> T;
 
-    // 더 긴 수를 A로 저장하기
-    if (A.size() < B.size())
+    for (int i = 0; i < T; i++)
     {
-        tmp = A;
-        A = B;
-        B = tmp;
-    }
+        cin >> x >> y;
+        distance = y - x;
 
-    // num1, num2 배열을 만드는 과정
-    for (int i = 0; i < A.size(); i++)
-    {
-        num1[i + 1] = A[i] - '0';
-    }
-
-    for (int i = 0; i < B.size(); i++)
-    {
-        // 계산의 편리를 위해 num2배열 첫 원소의 시작위치를 조정
-        num2[i + 1 + (A.size() - B.size())] = B[i] - '0';
-    }
-
-    // num배열들의 끝부분부터 덧셈을 하면서 스택에 값 푸쉬
-    for (int i = A.size(); i > 0; i--)
-    {
-        sum = num1[i] + num2[i];
-        if (sum >= 10)
+        long long j = 1;
+        while (j * j <= distance)
         {
-            num1[i - 1]++;
-            sum -= 10;
+            j++;
         }
-        result.push(sum);
-    }
+        j--;
 
-    if (num1[0] != 0)
-    {
-        cout << 1;
-    }
+        result = distance - (j * j);
+        // ceil은 파라미터를 올림 처리하여 리턴하는 함수
+        result = ceil((double)result / (double)j);
 
-    for (int i = 0; i < A.size(); i++)
-    {
-        cout << result.top();
-        result.pop();
+        printf("%d\n", j * 2 - 1 + result);
     }
 
     return 0;
