--- a/_posts/Baekjoon/2021-05-11-1011.md
+++ b/_posts/Baekjoon/2021-05-11-1011.md
@@ -24,13 +24,13 @@ tags: Algorithm
 |25|9|5|123454321|
 |N^2|2*N-1|square(N)|12345...N....54321|
 
-**distance가 18인 경우**
+> **distance가 18인 경우**
 
-1. distance를 넘지 않는 N을 구한다.
+**1. distance를 넘지 않는 N을 구한다.**
     * N = 4
-2. distance - N*N
+**2. distance - N*N**
     * 18 - 16 = 2
-3. distance가 16인 경우 7번의 워프를 진행한다. 따라서 2광년을 이동하기 위한 이동 횟수를 더해주면 최종 워프 횟수이다.  
+**3. distance가 16인 경우 7번의 워프를 진행한다. 따라서 2광년을 이동하기 위한 이동 횟수를 더해주면 최종 워프 횟수이다.**  
     * 남은 거리 / N 을 올림수 처리하여 구한다.
 
 ### Code  
