--- a/_posts/Network/2021-06-05-UDP-cksum.md
+++ b/_posts/Network/2021-06-05-UDP-cksum.md
@@ -19,20 +19,19 @@ tags: Network
 
 **UDP Checksum 을 계산하기 위해서는 IP Header 와 UDP header에 있는 일부 정보들을 가져와 IPv4 Pseudo Header 를 만든 후에 계산해 줘야 한다.**  
 
-![그림1](/assets/Network/udpcksum/1.png)
+![그림1](/assets/Network/udpcksum/1.png)  
 **UDP Header**  
 
-![그림2](/assets/Network/udpcksum/2.png)
+![그림2](/assets/Network/udpcksum/2.png)  
 **IP Header**  
 
-![그림3](/assets/Network/udpcksum/3.png)
+![그림3](/assets/Network/udpcksum/3.png)  
 **IPv4 Pseudo Header**  
 
 ### IPv4 Pseudo Header
 
-![그림4](/assets/Network/udpcksum/4.png)
-위 예제에서 IP Header와 UDP Header 그리고 Data(test)를 확인할 수 있고 bad cksum이 발생하고 있음을 확인할 수 있다.  
-0x8083 이 아닌 0xcc2a 가 올바른 cksum 이라고 packet capture tool 에서 말해주고 있는데 실제로 그런지 확인해보자.  
+![그림4](/assets/Network/udpcksum/4.png)  
+위 예제에서 IP Header와 UDP Header 그리고 Data(test)를 확인할 수 있고 bad cksum이 발생하고 있음을 확인할 수 있다. 0x8083 이 아닌 0xcc2a 가 올바른 cksum 이라고 packet capture tool 에서 말해주고 있는데 실제로 그런지 확인해보자.  
 
 |field|value|
 |---|---|
@@ -45,26 +44,27 @@ tags: Network
 |Destination Port|270f|
 |Length|000c|
 |Data|7465 7374|
+
 **IPv4 Pseudo Header**  
 
-* Length Filed 는 UDP Length 와 같은 값을 넣어준다.  
+*Length Filed 는 UDP Length 와 같은 값을 넣어준다.*  
 
 ### UDP checksum calculate
 
 Checksum 계산방법은 IP Header 의 Checksum 계산 방법과 동일하며 IPv4 Pseudo Header 의 필드를 16-bit word 단위로 모두 더하여 합계를 구한 뒤 발생한 carry bit 를 4bit 만큼 다시 합계에 더해 준 후, bit 반전 시키면(1의보수) checksum 이 된다.  
 [Carry & Overflow](https://limjunho.github.io/2021/06/05/carry-vs-overflow.html)  
 
-1. 필드를 word단위로 모두 더한다.  
+1. **필드를 word단위로 모두 더한다.**  
 ```
 c0ff+ff32+c0ff+ff32+0011+000c+a45c+270f+000c+7465+7374 = 0x533d0
 ```  
 
-2. 발생한 carry bit를 가산해준다.  
+2. **발생한 carry bit를 가산해준다.**  
 ```
 0x533d0 -> 33d0 + 5 = 33d5
 ```   
 
-3. 1의 보수 연산을 취해준다.  
+3. **1의 보수 연산을 취해준다.**  
 ```
 0011 0011 1101 0101 = 33d5
 1100 1100 0010 1010 = cc2a
