--- a/_posts/Network/2021-06-05-UDP-cksum.md
+++ b/_posts/Network/2021-06-05-UDP-cksum.md
@@ -82,8 +82,8 @@ c0ff+ff32+c0ff+ff32+0011+000c+a45c+270f+000c+7465+7374 = 0x533d0
 int main(){
     unsigned short IPv4_Pseudo_Header[] = {
         // IPv4 Header
-        0xc0ff, 0xff32, // c0 ff ff 32 => Source IP Address : 192.255.255.32
-        0xc0ff. 0xff33, // c0 ff ff 33 => Destination IP Address : 192.255.255.33
+        0xc0ff, 0xff32, // c0 ff ff 32 => Source IP Address : 192.255.255.50
+        0xc0ff, 0xff33, // c0 ff ff 33 => Destination IP Address : 192.255.255.51
         0x0011,         // Zero(0x00), Protocol(0x11)
         0x000c,         // UDP Length
 
