--- a/_posts/MySql/2021-07-30-MySql key 종류.md
+++ b/_posts/MySql/2021-07-30-MySql key 종류.md
@@ -7,7 +7,7 @@ tags: MySql
 
 본 문서에서는 데이터베이스 키의 개념 및 종류를 정리한다.    
 
-용어가 이해되지 않는다면 [MySql Database 릴레이션 용어 정리]()를 참고
+용어가 이해되지 않는다면 [MySql Database 릴레이션 용어 정리](https://limjunho.github.io/2021/07/30/MySql-%EB%A6%B4%EB%A0%88%EC%9D%B4%EC%85%98-%EC%9A%A9%EC%96%B4.html)를 참고
 
 [send me email](mailto:jewel7492@gmail.com) if you have any questions.
 
@@ -19,7 +19,7 @@ tags: MySql
 
 **학생**  
 
-|학생|주민등록번호|이름|
+|학번|주민등록번호|이름|
 |:--:|:--------:|:--:|
 |190001|930324-1234567|홍길동|
 |190002|900108-1765432|최민수|
@@ -53,14 +53,14 @@ tags: MySql
 **최소성**  
 * 키를 구성하는 속성 하나를 제거하면 유일하게 식별할 수 없도록 꼭 필요한 최소의 속성으로 구성되어야 한다. 그러나 학번이나 주민등록번호가 최소성을 만족한다고 해서 슈퍼키가 아닌 것은 아니다. 슈퍼키는 최소성과 관계없이 튜플을 유일하게 구분할 수 있으면 된다. 슈퍼키 중에서 유일성과 최소성을 만족시키는 것들이 후보키가 되는 것이다.
 
-**예시 : 학생 릴레이션에서는 학번, 주민등록번호, (학번, 주민등록번호), (학번, 주민등록번호, 이름) 등이 슈퍼키이다.**
+**예시 : 학생 릴레이션에서는 (주민등록번호, 이름), (학번, 주민등록번호), (학번, 주민등록번호, 이름) 등이 슈퍼키이다.**
 
 ## 후보키(Candidate Key)
 
 **릴레이션을 구성하는 속성들 중에서 튜플을 유일하게 식별하기 위해 사용되는 속성들의 부분집합.**  
 유일성과 최소성을 모두 만족.  
 
-**예시 : 학생 릴레이션에서 학번이나 주민등록번호는 유일성과 최소성을 만족하므로 후보키가 된다. <수강> 릴레이션에서는 (학번, 과목명)으로 조합해야 유일성과 최소성을 만족하기 때문에 (학번, 과목명)으로 조합된 것이 후보키가 된다.**
+**예시 : 학생 릴레이션에서 학번이나 주민등록번호는 유일성과 최소성을 만족하므로 후보키가 된다. 수강 릴레이션에서는 (학번, 과목명)으로 조합해야 유일성과 최소성을 만족하기 때문에 (학번, 과목명)으로 조합된 것이 후보키가 된다.**
 
 *※ (학번, 과목명)과 같이 2개 이상의 필드를 조합하여 만든 키를 복합키(Comoisite Key)라고 한다.*  
 
@@ -90,8 +90,8 @@ tags: MySql
 
 **예시 : 수강 릴레이션의 학번은 학생 릴레이션의 기본키인 학번을 참조하고 있으므로 수강 릴레이션에서 학번은 외래키가 된다.**  
 
-<수강> 릴레이션의 학번 속성에는 <학생> 릴레이션의 학번 속성에 없는 값을 입력할 수 없다.  
-<학생> 릴레이션과 <수강> 릴레이션은 학번을 기준으로 관계가 설정된 것이다.  
+수강 릴레이션의 학번 속성에는 학생 릴레이션의 학번 속성에 없는 값을 입력할 수 없다.  
+학생 릴레이션과 수강 릴레이션은 학번을 기준으로 관계가 설정된 것이다.  
 
 ## Reference
 
