--- a/_posts/MySql/2021-07-30-MySql 릴레이션 용어.md
+++ b/_posts/MySql/2021-07-30-MySql 릴레이션 용어.md
@@ -62,10 +62,12 @@ tags: MySql
 
 ## 도메인(domain)
 
-**도메인이란 릴레이션에 포함된 각각의 속성들이 가질 수 있는 값들의 집합이라고 할 수 있다.** 도메인이라는 개념이 필요한 이유는 릴레이션에 저장되는 데이터 값들이 본래 의도했던 값들만 저장되고 관리하기 위해서다.  
+**도메인이란 릴레이션에 포함된 각각의 속성들이 가질 수 있는 값들의 집합이라고 할 수 있다.**  
+도메인이라는 개념이 필요한 이유는 릴레이션에 저장되는 데이터 값들이 본래 의도했던 값들만 저장되고 관리하기 위해서다.  
 예를 들어 '성별'이라는 속성이 있다면 이 속성이 가질 수 있는 값은 '남' 또는 '여'인데, 데이터베이스 설계자는 성별의 도메인으로 'SEX'를 정의하고 그 값으로 '남', '여'로 지정한 뒤 '성별'이라는 속성은 'SEX' 도메인에 있는 값만을 가질 수 있다고 지정해 놓으면 사용자들이 실수로 남, 여 이외의 값을 입력하는 것을 방지할 수 있다.  
 도메인의 이름은 속성 이름과 같을 수도 있고 다를 수도 있으며 하나의 도메인을 여러 속성에서 공유할 수도 있다. 
 
 ## Reference
 
-> [[database] 키의 개념 및 종류 - 슈퍼키, 후보키, 기본키, 대체키, 외래키 - moonibot](https://moonibot.tistory.com/61)   
+> [[데이터베이스]릴레이션 용어- 속성(애트리뷰트), 튜플, 도메인, 차수, 카디날리티 - IT 양햄찌(jhnyang)](https://jhnyang.tistory.com/108)   
+> [관계형 데이터베이스 1) 릴레이션이란? - by Nolja놀자](https://nolja98.tistory.com/12?category=889493)  
