--- a/_posts/Spring_boot/2021-08-15-AOP.md
+++ b/_posts/Spring_boot/2021-08-15-AOP.md
@@ -22,7 +22,7 @@ tags: Springboot
 
 위의 상황에서 3번 기능을 수정한다면 클래스 A, B, C 모두 수정해주어야 하기 때문에 유지보수성이 떨어진다.  
 
-**AOP에서는 각각 기능별 Aspect를 만들고 어느 클래스에 적용할지 입력해주는 방식이다.**  
+**AOP는 각각 기능별 Aspect를 만들고 어느 클래스에 적용할지 입력해준다.**  
 
 ![그림2](/assets/Spring_boot/AOP/2.PNG)  
 
