--- a/_posts/node.js/2021-02-18-Node.js Swagger example.md
+++ b/_posts/node.js/2021-02-18-Node.js Swagger example.md
@@ -1,6 +1,6 @@
 ---
 title: Node.js Swagger example
-tags: Node.js MySql
+tags: Node.js
 ---
 
 Swagger는 개발자가 REST 웹 서비스를 설계, 빌드, 문서화, 소비하는 일을 도와주는 대형 도구 생태계의 지원을 받는 오픈 소스 소프트웨어 프레임워크이다.  
